--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,12 @@
             header
         </header>
         <main>
-            hello
+            <p> <ul>
+                <li> Name</li>
+                <li> School</li>
+                <li> Address</li>
+            </ul>
+       </p>
         </main>
         <footer>Hi
 
