--- a/index.html
+++ b/index.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my web page</title>
-  </head>
-  <link rel="stylesheet" href="index.css" />
-  <body>
-    <ul>
-      <li>beginners</li>
-      <li>amatuer</li>
-      <li>professional</li>
-      <li>MASTER</li>
-    </ul>
-    <div>
-      <header>Lagos State Electricity Board</header>
-      <ol>
-        <li>about</li>
-        <li>strategic goals</li>
-        <li>more info</li>
-      </ol>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Department</th>
-          <th>Occupation</th>
-          <th>Position</th>
-        </tr>
-        <tr>
-          <td>Adebowale</td>
-          <td>ICT</td>
-          <td>Software Engineer</td>
-          <td>Intern</td>
-        </tr>
-        <tr>
-          <td>Patrick</td>
-          <td>ICT</td>
-          <td>computer science</td>
-          <td>specialist</td>
-        </tr>
-      </table>
-      <p>welcome to my webpage.</p>
-      <p>
-        please click on this link for more info
-        <a href="www.gemini.com"> Gemini AI assistant </a>
-      </p>
-      <p>
-        <label> </label>
-      </p>
+<html>
+<head>
+  <title>Lagos State Electricity Board</title>
+  <link rel="stylesheet" href="index2.css">
+</head>
+<body>
+
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="Lagos State Electricity Board Logo"> 
     </div>
-  </body>
+    <h1>Lagos State Electricity Board</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About PPA</a></li>
+      <li><a href="#">Principal Officers</a></li>
+      <li><a href="#">Resources</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Careers</a></li>
+      <li><a href="#">Contacts</a></li>
+    </ul>
+  </nav>
+
+  <div class="container">
+
+    <div class="announcement">
+      <h2>LAGOS STATE ELECTRICITY BOARD - REQUEST FOR EXPRESSION OF INTEREST (REOI): SELECTION OF CONSULTANTS/CONTRACTORS AND SERVICE PROVIDERS FOR THE ENGAGEMENT OF CONSULTANT FOR THE COLLECTION OF IPP ENERGY CONSUMPTION CHARGE FROM LASG ESTATES AND LOAD CENTERS TO ENHANCE REVENUE GENERATION.</h2>
+      <p><strong>Deadline:</strong> [Insert Deadline]</p> 
+      <a href="#" class="btn">View Details</a> 
+    </div>
+
+    <div class="content">
+      <div class="section">
+        <h3>About Us</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+
+      <div class="section">
+        <h3>News & Events</h3>
+        <ul>
+          <li>News Item 1</li>
+          <li>News Item 2</li>
+          <li>News Item 3</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
+  <footer>
+    &copy; 2024 Lagos State Electricity Board. All rights reserved.
+  </footer>
+
+</body>
 </html>
